--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -28,17 +28,13 @@
     margin: 0;
     padding: 0;
     li {
-      display: block;
-      margin-right: 10px;
       color: lighten($black, 50%);
-      font-size: 0.9rem;
-      line-height: 1.8;
-      &:last-of-type {
-        margin-right: 0;
-      }
+      font-size: 1rem;
       a {
         color: lighten($black, 50%);
         text-decoration: none;
+        padding: 12px 14px 12px 0;
+        display: block;
         &:hover {
           text-decoration: underline;
         }
@@ -62,6 +58,10 @@
       justify-content: flex-end;
       li {
         list-style: none;
+        margin-right: 10px;
+        &:last-of-type {
+          margin-right: 0;
+        }
         a {
           display: inline-block;
           height: 40px;
