optimize font loading

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -12,5 +12,5 @@ $link-hover-color: lighten($primary, 20%);
 $link-hover-decoration: underline;
 
 // Fonts
-$font-family-base: 'DM Sans', Arial, Helvetica, sans-serif, -apple-system;
+$font-family-base: Helvetica, Arial, sans-serif, -apple-system;
 $font-family-heading: 'DM Serif Display', serif, -apple-system;
