--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -2,5 +2,5 @@
     <h2>
       <a href="{{ .Permalink }}">{{ .Title }}</a>
     </h2>
-    {{ .Content | truncate 120 "..." }}
+    {{ .Content | truncate 120 "…" }}
 </div>
