--- a/layouts/index.html
+++ b/layouts/index.html
@@ -45,7 +45,7 @@
     </div>
     {{ end }}
     <div class="col-12 text-center">
-      <a class="button button-primary" href="{{ .Site.BaseURL }}services">View All Services</a>
+      <a class="button button-primary" href="{{ "services/" | relURL }}">View All Services</a>
     </div>
   </div>
 </div>
