--- a/layouts/partials/call.html
+++ b/layouts/partials/call.html
@@ -8,6 +8,6 @@
     </div>
   </div>
   <div class="call-box-bottom">
-    <a href="{{ .Site.BaseURL }}contact" class="button">Contact</a>
+    <a href="{{ "contact/" | relURL }}" class="button">Contact</a>
   </div>
 </div>
