--- a/layouts/index.html
+++ b/layouts/index.html
@@ -51,6 +51,7 @@
 </div>
 {{end}}
 
+{{if ne .Site.Data.features nil}}
 <div class="strip strip-grey">
   <div class="container pt-6 pb-6 pt-md-10 pb-md-10">
     <div class="row justify-content-center">
@@ -70,6 +71,8 @@
     </div>
   </div>
 </div>
+{{end}}
+
 {{ end }}
 
 {{ define "footer_js" }}
