--- a/layouts/index.html
+++ b/layouts/index.html
@@ -51,7 +51,7 @@
 </div>
 {{end}}
 
-{{if ne .Site.Data.features nil}}
+{{if .Site.Data.features}}
 <div class="strip strip-grey">
   <div class="container pt-6 pb-6 pt-md-10 pb-md-10">
     <div class="row justify-content-center">
