Do not show email label in footer if there is email configured

--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -7,8 +7,10 @@
 {{ if .Site.Data.contact.phone }}
             <li><strong>Phone: </strong><span>{{ .Site.Data.contact.phone }}</span></li>
 {{ end }}
+{{ if .Site.Data.contact.email }}
             <li><strong>Email: </strong><a href="mailto:{{ .Site.Data.contact.email }}">
                 {{ .Site.Data.contact.email }}</a></li>
+{{ end }}
           </ul>
           <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>
         </div>
