--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,4 @@
-{{ define "title" }}{{ .Site.Params.title }}{{ end}}
+{{ define "title" }}{{ .Site.Title }}{{ end}}
 {{ define "header_css" }}{{ end }}
 {{ define "body_classes" }}page-home{{ end }}
 {{ define "header_classes" }}header-transparent{{ end }}
