--- a/assets/scss/components/_intro.scss
+++ b/assets/scss/components/_intro.scss
@@ -31,11 +31,13 @@
     font-family: $font-family-base;
   }
   p {
-    width: 80%;
     font-size: 1.2rem;
     font-weight: light;
     line-height: 1.5;
     color: $steel;
+    @include media-breakpoint-up(md) {
+      width: 80%;
+    }
   }
 }
 
