--- a/layouts/page/contact.html
+++ b/layouts/page/contact.html
@@ -8,7 +8,7 @@
     <div class="col-12 col-md-8">
       <div class="service service-single">
         <h1 class="title">{{.Title}}</h1>
-        {{ partial "call.html" . }}
+        {{ partial "call.html" (dict "site" .Site "context" . "show_button" "false") }}
         <div class="content mt-4">{{.Content}}</div>
       </div>
     </div>
