add social media and changelog

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -49,8 +49,8 @@ $sub-footer-text-color: $white;
 @import 'components/intro';
 @import 'components/intro-image';
 @import 'components/strip';
-@import 'components/whitebox';
 @import 'components/feature';
+@import 'components/social';
 
 // Pages
 @import 'pages/home';
