--- a/assets/scss/components/_sub-footer.scss
+++ b/assets/scss/components/_sub-footer.scss
@@ -1,7 +1,8 @@
 .sub-footer {
   background: $sub-footer-background-color;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  color: $sub-footer-text-color;
+  padding-top: 15px;
+  padding-bottom: 15px;
   @include media-breakpoint-up(md) {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -10,63 +11,21 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-size: 1rem;
     @include media-breakpoint-up(md) {
       flex-direction: row;
-      font-size: 0.9rem;
-    }
-    ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      li {
-        list-style: none;
-        display: block;
-        color: $sub-footer-text-color;
-        strong {
-          font-weight: bold;
-          color: #ffffff;
-          display: none;
-        }
-        span {
-          padding: 10px 10px 10px 0;
-          display: inline-block;
-        }
-        a {
-          display: inline-block;
-          color: $sub-footer-text-color;
-          text-decoration: none;
-          padding: 10px 10px 10px 0;
-          &:hover {
-            text-decoration: underline;
-          }
-        }
-      }
-      @include media-breakpoint-up(sm) {
-        li {
-          display: inline-block;
-          margin-left: 10px;
-
-          &:first-of-type {
-            margin-left: 0;
-          }
-          strong {
-            font-weight: bold;
-            color: #ffffff;
-            display: inline-block;
-            margin-right: 4px;
-          }
-        }
-      }
     }
   }
-  .zerostatic {
-    display: inline-block;
-    padding: 10px 10px 10px 0;
-    color: #ffffff;
-    text-decoration: none;
-    &:hover {
-      text-decoration: underline;
+  .copyright {
+    margin-top: 10px;
+    font-size: 14px;
+    a {
+      font-weight: bold;
+      color: inherit;
+    }
+  }
+  .social {
+    a:first-of-type {
+      margin-left: -10px;
     }
   }
 }
