--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -3,15 +3,12 @@
     <div class="row">
       <div class="col-12">
         <div class="sub-footer-inner">
-          <ul>
-            {{ if .Site.Data.contact.phone }}
-                <li><strong>Phone: </strong><span>{{ .Site.Data.contact.phone }}</span></li>
-            {{ end }}
-            {{ if .Site.Data.contact.email }}
-                <li><strong>Email: </strong><a href="mailto:{{ .Site.Data.contact.email }}">{{ .Site.Data.contact.email }}</a></li>
-            {{ end }}
-          </ul>
-          <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>
+          {{ if .Site.Data.social }}
+            {{ partial "social.html" . }}
+          {{ end }}
+          {{ if .Site.Params.footer.copyright_text }}
+            <div class="copyright">{{ .Site.Params.footer.copyright_text | safeHTML }}</div>
+          {{ end }}
         </div>
       </div>
     </div>
