Add customisation for RSSE Africa

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -44,11 +44,13 @@
       </div>
       {{ end }}
     </div>
+    {{ if not .Site.Params.homepage.hide_view_all_services }}
     <div class="row justify-content-center">
       <div class="col-auto">
         <a class="button button-primary" href="{{ "services/" | relURL }}">View All Services</a>
       </div>
     </div>
+    {{ end }}
   </div>
 </div>
 {{end}}
