--- a/assets/scss/components/_logo.scss
+++ b/assets/scss/components/_logo.scss
@@ -3,29 +3,22 @@
   @include media-breakpoint-up(sm) {
     display: block;
   }
-  img {
-    max-width: unset;
-  }
   a {
     display: block;
-    width: 100%;
-    height: 100%;
+  }
+  img {
+    width: auto;
   }
 }
 .logo-mobile {
   display: block;
-  width: 40px;
-  padding: 10px 0 10px 0;
   @include media-breakpoint-up(sm) {
     display: none;
   }
-  img {
-    width: 100%;
-    height: auto;
-  }
   a {
     display: block;
-    width: 100%;
-    height: 100%;
+  }
+  img {
+    width: auto;
   }
 }
