improve google fonts, meta tags and readme docs

--- a/assets/scss/pages/team/_team-summary.scss
+++ b/assets/scss/pages/team/_team-summary.scss
@@ -10,6 +10,7 @@
     overflow: hidden;
     img {
       width: 60px;
+      height: auto;
     }
   }
   .team-meta {
@@ -45,6 +46,7 @@
     overflow: hidden;
     img {
       width: 90px;
+      height: auto;
     }
   }
 }
