--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,15 +6,16 @@ $white: #ffffff;
 $white-offset: #f6f7ff;
 $steel: #5C5A5A;
 
+// Fonts
+// Google fonts are imported in `layouts/partials/google-fonts.html`
+$font-family-base: Helvetica, Arial, sans-serif, -apple-system;
+$font-family-heading: 'Playfair Display', serif, -apple-system; // uses a Google font
+
 // Links
 $link-color: $primary;
 $link-decoration: none;
 $link-hover-color: lighten($primary, 20%);
 $link-hover-decoration: underline;
-
-// Fonts
-$font-family-base: Helvetica, Arial, sans-serif, -apple-system;
-$font-family-heading: 'Playfair Display', serif, -apple-system;
 
 // Footer
 $footer-background-color: $primary;
@@ -66,26 +67,3 @@ body {
     line-height: 1.3;
   }
 }
-
-// Display breakpoints for DEV
-{{ if .Site.IsServer }}
-body:after {
-  color: #000000;
-  font-size: 12px;
-  padding: 5px;
-  font-weight: bold;
-  right: 10px;
-  position: fixed;
-  text-align: center;
-  text-transform: uppercase;
-  bottom: 10px;
-  width: 200px;
-  z-index: 9999;
-  border: solid 1px #000000;
-  @each $name, $value in $grid-breakpoints {
-    @include media-breakpoint-up($name) {
-      content: '#{$name} - min-width: #{$value}';
-    }
-  }
-}
-{{ end }}
