fixing some lighthouse issues

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -39,6 +39,11 @@
           text-decoration: underline;
         }
       }
+      &.active {
+        a {
+          font-weight: bold;
+        }
+      }
     }
     @include media-breakpoint-up(sm) {
       height: inherit;
