--- a/layouts/partials/footer-menu.html
+++ b/layouts/partials/footer-menu.html
@@ -1,8 +1,8 @@
-<div id="main-menu" class="main-menu">
+<div id="footer-menu" class="footer-menu">
   <ul>
     {{ $currentPage := . }}
-    {{ range .Site.Menus.main }}
-    {{ $active := or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}
+    {{ range .Site.Menus.footer }}
+    {{ $active := or ($currentPage.IsMenuCurrent "footer" .) ($currentPage.HasMenuCurrent "footer" .) }}
     {{ $active = or $active (eq .Name $currentPage.Title) }}
     <li class="menu-item-{{ .Name | lower }} {{ if $active }}active{{ end }}">
       <a href="{{.URL}}">
