--- a/layouts/team/summary-large.html
+++ b/layouts/team/summary-large.html
@@ -8,9 +8,9 @@
     <h2 class="team-name">{{ .Title }}</h2>
     <p class="team-description">{{ .Params.Jobtitle }}</p>
     {{ if .Params.Linkedinurl }}
-    <a target="_blank" href="{{ .Params.Linkedinurl }}">LinkedIn</a> {{ end }}
+    <a target="_blank" rel="noreferrer" href="{{ .Params.Linkedinurl }}">LinkedIn</a> {{ end }}
     {{ if .Params.Twitterhandle }}
-    <a target="_blank" href="https://twitter.com/{{ .Params.Twitterhandle }}">Twitter</a> {{ end }}
+    <a target="_blank" rel="noreferrer" href="https://twitter.com/{{ .Params.Twitterhandle }}">Twitter</a> {{ end }}
 
   </div>
   <div class="team-content">    {{ .Content | truncate (.Site.Params.team.summary_large_truncate | default 120 ) "…" }}</div>
