--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,3 @@
-{{ define "title" }}{{ .Site.Title }}{{ end}}
 {{ define "body_classes" }}page-home{{ end }}
 
 {{ define "main" }}
@@ -7,8 +6,8 @@
     <div class="row justify-content-start">
       <div class="col-12 col-md-7 col-lg-6 order-2 order-md-1">
         {{ .Content }}
-        {{ if .Site.Params.homepage.show_call_box }}
-        {{ partial "call.html" (dict "site" .Site "context" . "show_button" "true") }}
+        {{ if .Site.Params.homepage.show_contact_box }}
+          {{ partial "call.html" (dict "site" .Site "context" . "show_button" "true") }}
         {{ end }}
       </div>
       {{ if .Params.intro_image }}
@@ -32,7 +31,7 @@
       </div>
       {{ end }}
     </div>
-    {{ if not .Site.Params.homepage.hide_view_all_services }}
+    {{ if not .Site.Params.homepage.show_services_button }}
     <div class="row justify-content-center">
       <div class="col-auto">
         <a class="button button-primary" href="{{ "services/" | relURL }}">View All Services</a>
@@ -51,7 +50,7 @@
       <div class="col-12 col-md-6 col-lg-4 mb-2">
         <div class="feature">
           {{ if .image }}
-          <div class="feature-image"><img alt="{{ .Title }} logo" src="{{ .image | relURL }}" /></div>
+          <div class="feature-image"><img width="100" height="100" alt="{{ .Title }} logo" src="{{ .image | relURL }}" /></div>
           {{ end }}
           <h2 class="feature-title">{{ .title }}</h2>
           <div class="feature-content">
