--- a/layouts/team/summary.html
+++ b/layouts/team/summary.html
@@ -8,7 +8,8 @@
     <h2 class="team-name">{{ .Title }}</h2>
     <p class="team-description">{{ .Params.Jobtitle }}</p>
     {{ if .Params.Linkedinurl }}
-    <a target="_blank" href="{{ .Params.Linkedinurl }}">LinkedIn</a> {{ end }}
+      <a target="_blank" rel="noreferrer" href="{{ .Params.Linkedinurl }}">LinkedIn</a> 
+    {{ end }}
   </div>
   <div class="team-content"></div>
 </div>
