make fonts and colors editable in config.toml, update seo, update README

--- a/assets/scss/components/_call.scss
+++ b/assets/scss/components/_call.scss
@@ -41,7 +41,7 @@
     font-weight: bold;
   }
   svg {
-    fill: lighten($secondary, 40%);
+    fill: lighten($primary, 40%);
     position: absolute;
     bottom: -9px;
     right: 0;
