--- a/assets/scss/components/_intro.scss
+++ b/assets/scss/components/_intro.scss
@@ -34,7 +34,7 @@
     font-size: 1.2rem;
     font-weight: light;
     line-height: 1.5;
-    color: $steel;
+    color: $grey;
     @include media-breakpoint-up(md) {
       width: 80%;
     }
