--- a/layouts/partials/google-fonts.html
+++ b/layouts/partials/google-fonts.html
@@ -1,3 +1,5 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+{{ with .Site.Params.fonts }}
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="{{ .google_fonts }}" rel="stylesheet">
+{{ end }}
