--- a/assets/scss/components/_content.scss
+++ b/assets/scss/components/_content.scss
@@ -17,7 +17,7 @@
   p {
     font-family: $font-family-base;
     line-height: 1.56;
-    color: $steel;
+    color: $grey;
   }
   h1 {
     font-family: $font-family-base;
@@ -59,7 +59,7 @@
     margin-bottom: 5px;
     line-height: 1.56;
     margin-left: 20px;
-    color: $steel;
+    color: $grey;
   }
   hr {
     border: none;
@@ -87,7 +87,7 @@
   }
   blockquote {
     padding: 0 1em;
-    color: $steel;
-    border-left: .25em solid $secondary;
+    color: $grey;
+    border-left: .25em solid $primary;
   }
 }
