fix: unable to exit hamburger overlay large screen

--- a/assets/scss/components/_main-menu-mobile.scss
+++ b/assets/scss/components/_main-menu-mobile.scss
@@ -37,6 +37,9 @@
         animation-delay: 0.6s;
       }
     }
+    @include media-breakpoint-up(md) {
+      display: none;
+    }
   }
   ul {
     font-size: 30px;
