--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -6,8 +6,8 @@
           {{ if .Site.Data.social }}
             {{ partial "social.html" . }}
           {{ end }}
-          {{ if .Site.Params.footer.copyright_text }}
-            <div class="copyright">{{ .Site.Params.footer.copyright_text | safeHTML }}</div>
+          {{ with .Site.Params.footer.copyright_text }}
+            <div class="copyright">{{ . | safeHTML }}</div>
           {{ end }}
         </div>
       </div>
