--- a/layouts/services/single.html
+++ b/layouts/services/single.html
@@ -17,9 +17,8 @@
 {{ $library := resources.Get "js/libs/library.js" }}
 {{ $services := resources.Get "js/pages/services.js" }}
 {{ $servicesJS := slice $library $services | resources.Concat "js/services.js" }}
-{{ if .Site.IsServer }}
-  <script type="text/javascript" src="{{ $servicesJS.RelPermalink }}"></script>
-  {{ else }}
-  <script type="text/javascript" src="{{ ($servicesJS | minify | fingerprint).RelPermalink }}"></script>
-  {{ end }}
+{{ if hugo.IsProduction }}
+  {{ $servicesJS = $servicesJS | minify | fingerprint }}
+{{ end }}
+<script type="text/javascript" src="{{ $servicesJS.RelPermalink }}"></script>
 {{ end }}
