--- a/assets/scss/bootstrap/bootstrap-grid.scss
+++ b/assets/scss/bootstrap/bootstrap-grid.scss
@@ -13,7 +13,7 @@ $include-column-box-sizing: true !default;
 @import "mixins/grid";
 @import "mixins/utilities";
 
-@import "vendor/rfs";
+@import "third-party/rfs";
 
 @import "containers";
 @import "grid";
@@ -21,42 +21,39 @@ $include-column-box-sizing: true !default;
 @import "utilities";
 // Only use the utilities we need
 // stylelint-disable-next-line scss/dollar-variable-default
-$utilities: map-get-multiple(
-  $utilities,
-  (
-    "display",
-    "order",
-    "flex",
-    "flex-direction",
-    "flex-grow",
-    "flex-shrink",
-    "flex-wrap",
-    "justify-content",
-    "align-items",
-    "align-content",
-    "align-self",
-    "margin",
-    "margin-x",
-    "margin-y",
-    "margin-top",
-    "margin-end",
-    "margin-bottom",
-    "margin-start",
-    "negative-margin",
-    "negative-margin-x",
-    "negative-margin-y",
-    "negative-margin-top",
-    "negative-margin-end",
-    "negative-margin-bottom",
-    "negative-margin-start",
-    "padding",
-    "padding-x",
-    "padding-y",
-    "padding-top",
-    "padding-end",
-    "padding-bottom",
-    "padding-start",
-  )
-);
+$utilities: map-get-multiple($utilities,
+    ("display",
+      "order",
+      "flex",
+      "flex-direction",
+      "flex-grow",
+      "flex-shrink",
+      "flex-wrap",
+      "justify-content",
+      "align-items",
+      "align-content",
+      "align-self",
+      "margin",
+      "margin-x",
+      "margin-y",
+      "margin-top",
+      "margin-end",
+      "margin-bottom",
+      "margin-start",
+      "negative-margin",
+      "negative-margin-x",
+      "negative-margin-y",
+      "negative-margin-top",
+      "negative-margin-end",
+      "negative-margin-bottom",
+      "negative-margin-start",
+      "padding",
+      "padding-x",
+      "padding-y",
+      "padding-top",
+      "padding-end",
+      "padding-bottom",
+      "padding-start",
+    ));
 
 @import "utilities/api";
